--- a/404.html
+++ b/404.html
@@ -1,24 +1,11 @@
 ---
 layout: default
 ---
-
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<div class="p-5 text-center rounded-3">
+  <div class="row">
+  </div>
+    <h1 class="text-body-emphasis"><span class="glitch"><span aria-hidden="true">404</span>404<span aria-hidden="true">404</span></span> - Page Not Found</h1>
+    <p class="col-lg-8 mx-auto fs-5">
+      The requested page could not be found.
+    </p>
 </div>
