--- a/bak.html
+++ b/bak.html
@@ -1,32 +1,26 @@
 <html lang="en" data-bs-theme="light">
-	<head>
-		<script src="{{ "/assets/js/color-modes.js" | relative_url }}"></script>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="">
-		<meta name="author" content="Axel Persinger">
-		<link rel="canonical" href="https://axelp.io">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css">
-		<link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-
+    <head>
+		<script src="{{ "/assets/js/style.css" | relative_url }}"></script>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="Axel Persinger">
+        <title>Axel's Blog</title>
+        <link rel="canonical" href="https://axelp.io">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+        
 		<!-- Favicons -->
-        <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
-		<!-- !Favicons -->
-
-		<!-- SEO -->
-		{%- seo -%}
-		<!-- !SEO -->
-
-		<!-- Google Analytics -->
-		{%- if jekyll.environment == 'production' and site.google_analytics -%}
-			{%- include google-analytics.html -%}
-		{%- endif -%}
-		<!-- !Google analytics -->
-	</head>
-    <body class="bg-body-tertiary h-100">
+        <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+        <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+        <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+        <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
+        <link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
+        <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
+        <meta name="theme-color" content="#712cf9">
+    </head>
+    <body class="bg-body-tertiary">
 		
 		<!-- Light/Dark Theme -->
 		<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -103,32 +97,29 @@
 		<!-- !Light/Dark Theme -->
 
 		<!-- Main Body -->
-		<div class="container bg-body pb-5 mb-5">
+		<div class="container bg-body" style="height:100%;">
 			<!-- Header -->
 			<header class="d-flex justify-content-center py-5">
 				<ul class="nav nav-pills">
-                    <li class="nav-item"><a href="/" class="nav-link {% if page.url == '/' %}active{% endif %}" aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="/about" class="nav-link {% if page.url == '/about' %}active{% endif %}">About</a></li>
-                    <li class="nav-item"><a href="/cves" class="nav-link {% if page.url == '/CVEs' %}active{% endif %}">CVEs</a></li>
-                    <li class="nav-item"><a href="mailto:me@axel.io" class="nav-link">Contact</a></li>
+				  <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+				  <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+				  <li class="nav-item"><a href="#" class="nav-link">CVEs</a></li>
+				  <li class="nav-item"><a href="#" class="nav-link">Mail To Link</a></li>
 				</ul>
 			</header>
 			<!-- !Header -->
 
+
 			<!-- Content -->
-            {{ content }}
 			<!-- !Content -->
 
 			<!-- Footer -->
-            <footer class="py-3 my-4">
-                <p class="py-3 my-4 border-top text-center text-body-secondary">© 2015-2024 Axel Persinger</p>
-            </footer>
+			<footer class="footer container">
+				<span class="text-muted">Place sticky footer content here.</span>
+			</footer>
 			<!-- !Footer -->
         </div>
 		<!-- !Main Body -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-        <script>hljs.highlightAll();</script>
 	</body>
 </html>
-	
